# webcc20200813

./: CMakeLists.txt  readme.md  webcc20200813.sln
document/: webcc.vsdx
htmlRoot/: Demo_fileUpload.htm  index.html  main.html
htmlRoot/assets/layouts/layout/css/: layout.css
htmlRoot/assets/layouts/layout/scripts/: layout.js
htmlRoot/controller/: UnknownController.js  cameraDeviceController.js  config.js  infraredSensorController.js  mainController.js  mapEditController.js  relayDeviceController.js  userGroupController.js  userListController.js  vibrationFiberController.js  warningController.js  warningHistoryController.js
htmlRoot/dialog/: userDetail.html  userGroupDetail.html
htmlRoot/page/: cameraDevice.html  infraredSensor.html  mapEdit.html  relayDevice.html  unknown.html  userGroup.html  userList.html  vibrationFiber.html  warning.html  warningHistory.html
htmlRoot/share/: share_footer.html  share_header.html  share_sidebar.html
webcc20200813/: CMakeLists.txt  base64.cc  body.cc  body.h  client.cc  common.cc  common.h  config.h  connection.cc  connection.h  connection_pool.cc  connection_pool.h  desktop.ini  globals.cc  globals.h  gzip.cc  kagula_update_log.txt  logger.cc  logger.h  message.cc  message.h  parser.cc  parser.h  request.cc  request.h  request_builder.cc  request_builder.h  request_parser.cc  request_parser.h  response.cc  response.h  response_builder.cc  response_builder.h  response_parser.cc  response_parser.h  router.cc  router.h  server.cc  server.h  sessionInfo.cpp  (+14 more)
webcc20200813/webcc/: body.h  common.h  config.h  connection.h  logger.h  parser.h  request.h  request_builder.h  response_builder.h  server.h  socket.h  utility.h  version.h  view.h
webccDemo/: CMakeLists.txt  fakeDB.cpp  fakeDB.h  webccDemo.cpp  webccDemo.vcxproj  webccDemo.vcxproj.filters
